--- a/003 package node/007 xss protection 0/package.json
+++ b/003 package node/007 xss protection 0/package.json
@@ -3,7 +3,6 @@
   "description": "",
   "version": "1.0.0",
   "dependencies": {
-    "express": "4.17.1",
-    "nodemon": "2.0.2"
+    "express": "4.17.1"
   }
 }
